Custom membership- and role- providers

--- a/MvcPL/Views/User/Index.cshtml
+++ b/MvcPL/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcPL.Models.UserViewModel>
+﻿@model IEnumerable<MvcPL.Models.UserRegisterViewModel>
 
 @{
     ViewBag.Title = "Index";
