--- a/MvcPL/Views/Account/Login.cshtml
+++ b/MvcPL/Views/Account/Login.cshtml
@@ -9,20 +9,19 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Log on user</h4>
+        <h2>Log on user</h2>
         <hr/>
-        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
         <div class="form-group">
             @Html.LabelFor(m => m.Login, new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(m => m.Login, new { htmlAttributes = new { @class = "form-control" }})
-                @Html.ValidationMessageFor(m => m.Login, "", new {@class = "text-danger"})
+            <div class="col-md-10 form-inline text-left ">
+                @Html.EditorFor(m => m.Login, new { htmlAttributes = new { @class = "form-control"}})
+                @Html.ValidationMessageFor(m => m.Login, "", new {@class = "text-danger" })
             </div>
         </div>
-
+        <br/>
         <div class="form-group">
             @Html.LabelFor(m => m.Password, new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
+            <div class="col-md-10 form-inline text-left">
                 @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" }})
                 @Html.ValidationMessageFor(m => m.Password, "", new {@class = "text-danger"})
             </div>
@@ -37,15 +36,13 @@
                 </div>
             </div>
         </div>
-
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-default" />
+            <div class="col-md-12 form-inline">
+                <input type="submit" value="Login" class="btn btn-default"/>
+                <p class="btn btn-default">@Html.ActionLink("Register", "Register", new {@style = "color: #fff;"})</p>
             </div>
         </div>
-        <p>
-            @Html.ActionLink("Register", "Register")
-        </p>
 
     </div>
 }
