--- a/MvcPL/Views/Shared/_LoginPartial.cshtml
+++ b/MvcPL/Views/Shared/_LoginPartial.cshtml
@@ -4,16 +4,20 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
-
         <ul class="nav navbar-nav navbar-right">
-            @if (User.IsInRole("Administrator"))
-            {
-                <li>@Html.ActionLink("Manage users", "Index", "Admin")</li>
-            }
-            <li>
-                @Html.ActionLink("Welcome, " + User.Identity.Name, "Index", "Home", routeValues: null, htmlAttributes: new { title = "Manage" })
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle welcomLink" data-toggle="dropdown" title="Manage">Welcome, @User.Identity.Name <span class="caret"></span></a>
+                <div class="dropdown-menu">
+                    <ul>
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink("Manage users", "Index", "Admin")</li>
+                            <li>@Html.ActionLink("Manage sections", "CreateSection", "Admin")</li>
+                        }
+                        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                    </ul>
+                </div>
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
     }
 }
