Moderator functions, admin notifications

--- a/MvcPL/Content/main.css
+++ b/MvcPL/Content/main.css
@@ -201,7 +201,7 @@ a:hover {
   border: none;
   color: #fff;
   padding: 10px 17.5px;
-  margin-top: 15px;
+  margin-top: 0;
   font-size: 8px;
   font-size: 7.5px;
   line-height: 0.5em;
@@ -1161,5 +1161,6 @@ tr th {
 .dropdown-menu {
     padding: 0;
 }
+
 
 
