--- a/MvcPL/Views/Admin/Index.cshtml
+++ b/MvcPL/Views/Admin/Index.cshtml
@@ -17,7 +17,7 @@
                         @Html.DisplayNameFor(model => model.Login)
                     </th>
                     <th>
-                        Creation date
+                        @Html.DisplayNameFor(model => model.CreationDate)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.Roles)
