--- a/MvcPL/Views/Account/Login.cshtml
+++ b/MvcPL/Views/Account/Login.cshtml
@@ -12,24 +12,24 @@
         <h2>Log on user</h2>
         <hr/>
         <div class="form-group">
-            @Html.LabelFor(m => m.Login, new {@class = "control-label col-md-2"})
-            <div class="col-md-10 form-inline text-left ">
+            @Html.LabelFor(m => m.Login, new {@class = "control-label col-md-5"})
+            <div class="col-md-7 form-inline text-left ">
                 @Html.EditorFor(m => m.Login, new { htmlAttributes = new { @class = "form-control"}})
                 @Html.ValidationMessageFor(m => m.Login, "", new {@class = "text-danger" })
             </div>
         </div>
         <br/>
         <div class="form-group">
-            @Html.LabelFor(m => m.Password, new {@class = "control-label col-md-2"})
-            <div class="col-md-10 form-inline text-left">
+            @Html.LabelFor(m => m.Password, new {@class = "control-label col-md-5"})
+            <div class="col-md-7 form-inline text-left">
                 @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" }})
                 @Html.ValidationMessageFor(m => m.Password, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(m => m.RememberMe, new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.RememberMe, new {@class = "control-label col-md-5"})
+            <div class="col-md-7">
                 <div class="checkbox">
                     @Html.EditorFor(m => m.RememberMe)
                     @Html.ValidationMessageFor(m => m.RememberMe, "", new {@class = "text-danger"})
@@ -40,7 +40,7 @@
         <div class="form-group">
             <div class="col-md-12 form-inline">
                 <input type="submit" value="Login" class="btn btn-default"/>
-                <p class="btn btn-default">@Html.ActionLink("Register", "Register", new {@style = "color: #fff;"})</p>
+                <p class="btn btn-default">@Html.ActionLink("Register", "Register",null,  new {@style = "color: #fff;"})</p>
             </div>
         </div>
 
